# rpcproxy

./: .gitignore  AGENTS.md  README.md  pyproject.toml
src/rpcproxy/: __init__.py  adb_loop.py  cli.py  cli_post.py  demo_loop.py  logging_config.py  playwright_loop.py
src/rpcproxy/auth/: __init__.py  api_key.py  errors.py  local_authorization.py  sessions.py  types.py
src/rpcproxy/client/: __init__.py  base.py  chunking.py  envelope_types.py  handler_client.py
src/rpcproxy/fastapi_ws_rpc/: __init__.py  wire.py
src/rpcproxy/handlers/: __init__.py  adb_handler.py  playwright_handler.py
src/rpcproxy/testing/: __init__.py  mock_server.py
tests/: test_adb_handler.py  test_auth_api_key.py  test_auth_local_authorization.py  test_cli_playwright.py  test_cli_post.py  test_cli_post_integration.py  test_client_base.py  test_demo_loop.py  test_handler_client.py  test_playwright_handler.py
tests/example/: adb_screenshot.json  adb_tap.json  get_google.json  open_google.json
