[project]
name = "rpcproxy"
version = "0.1.0"
description = ""
authors = [
    { name = "tolatolatop", email = "tolatolatop@gmail.com" },
]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "click>=8.0",
    "websockets>=12",
]

[project.scripts]
rpcproxy = "rpcproxy.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/rpcproxy"]
