[project]
name = "rpcproxy"
version = "0.1.0"
description = ""
authors = [
    { name = "tolatolatop", email = "tolatolatop@gmail.com" },
]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "click>=8.0",
    "platformdirs>=4.0",
    "requests>=2.28",
    "websockets>=12",
]

[project.optional-dependencies]
playwright = [
    "playwright>=1.40",
]

[project.scripts]
rpcproxy = "rpcproxy.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/rpcproxy"]

[dependency-groups]
dev = [
    "playwright>=1.40",
    "pytest>=9.0.3",
    "pytest-asyncio>=1.3.0",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
testpaths = ["tests"]
